<resources>
    <string name="app_name">Campus Recruitment System</string>
    <string name="db_folder">Campus Recruitment System</string>
    <string name="db_name">Campus Recruitment System/database</string>
    <string name="db_folder_images">Campus Recruitment System/images</string>
    <string name="db_folder_resume">Campus Recruitment System/resume</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_employees">Employees </string>
    <string name="lbl_better">better</string>
    <string name="lbl_islamabad_pk">Islamabad ,Pk</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="msg_total_duration">Total duration of the quiz</string>
    <string name="lbl_los_angels_us">Los Angels, US</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_about">About</string>
    <string name="lbl_others2">others</string>
    <string name="lbl_hiree">HIREE</string>
    <string name="lbl_4_hrs_ago">4 hrs ago</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_candidates">Candidates</string>
    <string name="msg_creative_ux_dei">Creative UX Deigner with 6+ years of experience in optimizing user experience through innovative solutions and dynamic interface designs. Successful in enhancing user engag-ement for well-known brands, providing a compelling user experience to improve brand loyalty and customer retention.  </string>
    <string name="lbl_post_a_job2">POST A JOB </string>
    <string name="lbl_scheduled">scheduled</string>
    <string name="lbl_designing">Designing </string>
    <string name="lbl_product_manager">Product Manager</string>
    <string name="msg_resume_portfo">Resume &amp; Portfolio</string>
    <string name="lbl_hiree2">Hiree</string>
    <string name="lbl_new_password">New Password</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="msg_enter_your_new">Enter your new password and confirm the new password to reset password</string>
    <string name="lbl_worldwide">Worldwide</string>
    <string name="lbl_it_manger">IT MANGER</string>
    <string name="lbl_hired">hired</string>
    <string name="lbl_portfolio">Portfolio</string>
    <string name="lbl_log_out">Log Out </string>
    <string name="msg_liked_your_resu">liked your resume and want to take an interview of you.</string>
    <string name="lbl_1_hrs_ago">1 hrs ago</string>
    <string name="lbl_edit">Edit</string>
    <string name="msg_have_an_account">Have an account? <font color="#46007e">Log in</font></string>
    <string name="msg_application_sub">Application submitted</string>
    <string name="msg_3_active_candi">3 Active
 candidate</string>
    <string name="msg_quiz_is_mandato">Quiz is mandatory in order to apply for this job. This will test you aptitude for this job. </string>
    <string name="lbl_write_text">Write text </string>
    <string name="lbl_84_000_y">$84,000/y</string>
    <string name="lbl_management">Management</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_haley_jessica">Haley Jessica</string>
    <string name="lbl_mid_level">Mid Level </string>
    <string name="lbl_firefox">Firefox</string>
    <string name="lbl_a">A</string>
    <string name="lbl_b">B</string>
    <string name="msg_user_introface">User Introface and User Experience</string>
    <string name="lbl_c">C</string>
    <string name="lbl_jhon2">JHON </string>
    <string name="msg_the_average_lis2">The average listing price is </string>
    <string name="lbl_full_time">Full-Time</string>
    <string name="lbl_d">D</string>
    <string name="lbl_e">E</string>
    <string name="msg_cover_later_op">Cover Later (Optional)</string>
    <string name="msg_tap_on_options">Tap on options to select the correct answer</string>
    <string name="msg_graphics_design">Graphics Designer</string>
    <string name="msg_congratulations2">Congratulations! </string>
    <string name="msg_congratulations3">Congratulations! You passed the first round on Behance. Be prepare for next!</string>
    <string name="msg_congratulations4">Congratulations! You passed the first round on </string>
    <string name="lbl_not_yet2">not yet </string>
    <string name="lbl_booking_com">Booking.com </string>
    <string name="lbl_21_06_22">21/06/22</string>
    <string name="lbl_macdonald">Macdonald</string>
    <string name="lbl_feb_21"> Feb 21</string>
    <string name="lbl_09_00_am">09:00 am</string>
    <string name="msg_tap_on_the_book">Tap on the bookmark icon to save interesting
questions</string>
    <string name="lbl_monday">Monday</string>
    <string name="lbl_starbucks">Starbucks</string>
    <string name="lbl_beats">Beats</string>
    <string name="lbl_make_option">Make option</string>
    <string name="lbl_freelance">Freelance</string>
    <string name="lbl_ux_intern">UX Intern</string>
    <string name="lbl_companies">Companies</string>
    <string name="msg_we_are_the_team2">"We are the teams who create all of Facebook's products used by billions of people around the world. Want to build new features and improve existing products like Messenger, Video, Groups, News Feed, Search and more?

"</string>
    <string name="msg_shortlisted_can">Shortlisted Candidates</string>
    <string name="lbl_jhon">JHON</string>
    <string name="msg_created_on_10_d">created on 10 dec2023</string>
    <string name="msg_creative_ux_des">Creative UX Designer with 6+ years of experience in optimizing user experience through innovative solutions and dynamic interface designs. Successful in enhancing user engagement for well-known brands, providing a compelling user experience to improve brand loyalty and customer retention.  </string>
    <string name="lbl_seattle">Seattle</string>
    <string name="lbl_secluded">secluded</string>
    <string name="msg_macdonald_want">Macdonald want to contact with you in 24 hours with proper preparation </string>
    <string name="lbl_requirement">Requirement</string>
    <string name="lbl_san_jose_us">San Jose, US</string>
    <string name="msg_upload_your_cv">Upload your CV or Resume and use it when you apply for jobs</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_send_code">Send code</string>
    <string name="lbl_contract">Contract</string>
    <string name="lbl_select_location">Select Location</string>
    <string name="msg_applied_job_det">Applied Job Details</string>
    <string name="lbl_flutter_expert">Flutter expert</string>
    <string name="msg_best_universiti">Best Universities with great Talent</string>
    <string name="msg_let_s_register">Let\u2019s Register. Apply to jobs!</string>
    <string name="lbl_not_yet3">not yet</string>
    <string name="lbl_cv">CV</string>
    <string name="lbl_job_type">Job Type</string>
    <string name="msg_computer_scienc">Computer Science</string>
    <string name="lbl_start_quix">Start Quiz</string>
    <string name="lbl_apply">Submit Quiz</string>
    <string name="lbl_17_05_22">17/05/22</string>
    <string name="msg_we_are_the_team">"We are the teams who create all of Facebook's products used by billions of people around the world. Want to build new features and improve existing products like Messenger, Video, Groups, News Feed, Search and more?

Responsibilities:
Full stack web/mobile application development with a variety of coding languages
Create consumer products and features using internal programming language Hack
Implement web or mobile interfaces using XHTML, CSS, and JavaScript
Quiz:\u2028  . Quiz is mandatory in order to apply for this job. This will test your aptitude for this job. "</string>
    <string name="msg_product_designe">Product Designer</string>
    <string name="lbl_have">Have</string>
    <string name="lbl_designer">Designer</string>
    <string name="lbl_27">0</string>
    <string name="lbl_web_developer">Web Developer</string>
    <string name="lbl_115_000_y">$115,000/y</string>
    <string name="lbl_pdf">PDF</string>
    <string name="lbl_description3">Description :</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_volkswagen">Volkswagen</string>
    <string name="lbl_ali_butt">ALI BUTT</string>
    <string name="msg_final_hr_interv">Final HR interview</string>
    <string name="lbl_applications">Applications</string>
    <string name="msg_confirm_new_pas">Confirm New Password</string>
    <string name="lbl_email2">Email</string>
    <string name="lbl_log_in">Log in</string>
    <string name="lbl_4_8">4.8</string>
    <string name="lbl_e_mail">E-mail</string>
    <string name="lbl_e_profession">Profession</string>
    <string name="msg_track_applicati">Track Application</string>
    <string name="lbl_pinterest">Pinterest</string>
    <string name="msg_ui_ux_design_qu">UI UX Design Quiz</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_10">10</string>
    <string name="lbl_sign_up">Sign Up &#128077;</string>
    <string name="lbl_120_000">$120,000</string>
    <string name="lbl_description2">Description </string>
    <string name="lbl_facilitator">Company</string>
    <string name="lbl_80_000_y">$80,000/y</string>
    <string name="msg_reviewing_your">reviewing your applicatin, cover letter and portfolio. All the best!</string>
    <string name="lbl_fiverr">Fiverr</string>
    <string name="lbl_developer">Developer</string>
    <string name="lbl_6_hrs_ago">6 hrs ago</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_hamza_shah">Hamza shah</string>
    <string name="lbl_student">Student</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_send_message">send message</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_pasadena">Pasadena</string>
    <string name="lbl_293_jobs_found">293 Jobs Found</string>
    <string name="lbl_motion_designer">Motion Designer</string>
    <string name="lbl_jr_executive">Jr Executive</string>
    <string name="lbl_j_bizz">Jôbizz</string>
    <string name="lbl_trending_now">Trending Now</string>
    <string name="lbl_hamza">Hamza</string>
    <string name="msg_search_a_job_or">Search a job or position</string>
    <string name="lbl_florida_us">Florida, US</string>
    <string name="msg_company_s_indus">Company\u2019s Industry </string>
    <string name="msg_describe_company">Describe Your Company in Few Words </string>
    <string name="lbl_confirmation">Confirmation</string>
    <string name="msg_recommended_job">Recommended Jobs</string>
    <string name="no_gps">Your Mobile do not have GPS sensor, Please change the mobile for using this app.</string>
    <string name="lbl_upload_pdf">Upload
PDF</string>
    <string name="lbl_it_manager3">IT MANAGER </string>
    <string name="lbl_internship">Internship</string>
    <string name="lbl_it_manager2">IT Manager</string>
    <string name="lbl_resume_or_cv">Resume or CV</string>
    <string name="msg_welcome_to_jobs">Welcome to Jobseek!</string>
    <string name="msg_multinational_c">multinational company </string>
    <string name="lbl_job_status">Job status</string>
    <string name="lbl_dribbble">Dribbble</string>
    <string name="lbl_create_test">Create test </string>
    <string name="msg_haven_t_an_acco2">Haven\u2019t an account? </string>
    <string name="lbl_marketing2">Marketing </string>
    <string name="lbl_usa">USA</string>
    <string name="lbl_lahore_pk">Lahore ,Pk</string>
    <string name="lbl_california">California</string>
    <string name="lbl_managing">Managing </string>
    <string name="lbl_developer2">Developer </string>
    <string name="lbl_reviewed2">reviewed</string>
    <string name="lbl_0">0</string>
    <string name="lbl_3">3</string>
    <string name="lbl_close">close</string>
    <string name="lbl_open">open</string>
</resources>