<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <FrameLayout
        android:id="@+id/frameStackprice"
        android:layout_width="@dimen/_47pxh"
        android:layout_height="@dimen/_23pxv"
        android:layout_marginTop="@dimen/_1pxv">

        <TextView
            android:id="@+id/txtPrice"
            style="@style/txtPoppinssemibold9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:layout_marginBottom="@dimen/_10pxv"
            android:ellipsize="end"
            android:gravity="top|start"
            android:singleLine="true"
            android:text="@string/lbl_it_manger"
            tools:text="@string/lbl_it_manger" />

        <TextView
            android:id="@+id/txtLahorePk"
            style="@style/txtPoppinsmedium6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginBottom="@dimen/_3pxv"
            android:ellipsize="end"
            android:gravity="top|start"
            android:singleLine="true"
            android:text="@string/lbl_lahore_pk"
            tools:text="@string/lbl_lahore_pk" />

        <TextView
            android:id="@+id/txtCreatedon10d"
            style="@style/txtPoppinsmedium4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:ellipsize="end"
            android:gravity="top|start"
            android:singleLine="true"
            android:text="@string/msg_created_on_10_d"
            tools:text="@string/msg_created_on_10_d" />
    </FrameLayout>

    <TextView
        android:id="@+id/txt3Activecandid"
        style="@style/txtPoppinssemibold6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_42pxh"
        android:layout_marginTop="@dimen/_2pxv"
        android:layout_marginBottom="@dimen/_4pxv"
        android:layout_weight="0.15"
        android:text="@string/msg_3_active_candi"
        tools:text="@string/msg_3_active_candi" />

    <FrameLayout
        android:id="@+id/frameStackreviewed"
        android:layout_width="@dimen/_26pxh"
        android:layout_height="@dimen/_13pxv"
        android:layout_marginStart="@dimen/_14pxh"
        android:layout_marginBottom="@dimen/_10pxv">

        <TextView
            android:id="@+id/txtReviewed"
            style="@style/txtPoppinsmedium6_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="@dimen/_10pxv"
            android:ellipsize="end"
            android:gravity="top|start"
            android:singleLine="true"
            android:text="@string/lbl_reviewed2"
            tools:text="@string/lbl_reviewed2" />

        <TextView
            android:id="@+id/txtThree"
            style="@style/txtPoppinsmedium6_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginBottom="@dimen/_10pxv"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_3"
            tools:text="@string/lbl_3" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameStackzero"
        android:layout_width="@dimen/_15pxh"
        android:layout_height="@dimen/_13pxv"
        android:layout_marginStart="@dimen/_19pxh"
        android:layout_marginBottom="@dimen/_10pxv">

        <TextView
            android:id="@+id/txtZero"
            style="@style/txtPoppinsmedium6_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginEnd="@dimen/_5pxh"
            android:layout_marginBottom="@dimen/_10pxv"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_0"
            tools:text="@string/lbl_0" />

        <TextView
            android:id="@+id/txtHired"
            style="@style/txtPoppinsmedium6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="@dimen/_10pxv"
            android:ellipsize="end"
            android:gravity="top|start"
            android:singleLine="true"
            android:text="@string/lbl_hired"
            tools:text="@string/lbl_hired" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameStackgroupfortyfour"
        android:layout_width="@dimen/_94pxh"
        android:layout_height="@dimen/_18pxv"
        android:layout_marginStart="@dimen/_8pxh"
        android:layout_marginTop="@dimen/_1pxv"
        android:layout_marginBottom="@dimen/_5pxv">

        <ProgressBar
            android:id="@+id/progressBarGroupFortyFour"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_marginBottom="@dimen/_1pxv"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="@dimen/_16pxv"
            android:progress="48"
            android:progressDrawable="@drawable/layer_list_bg_gray_100_border_black_900_radius_8" />

        <LinearLayout
            android:id="@+id/linearRowopen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginEnd="@dimen/_8pxh"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtOpen"
                style="@style/txtAbhayaLibreSemiBoldabhayalibresemibold13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_open"
                tools:text="@string/lbl_open" />

            <TextView
                android:id="@+id/txtClose"
                style="@style/txtAbhayaLibreSemiBoldabhayalibresemibold13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_close"
                tools:text="@string/lbl_close" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>

