<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="homeOneRowModel" type="com.ruquaiyasapplication.app.modules.homeone.data.model.HomeOneRowModel"/>
    </data>
    <FrameLayout android:id="@+id/frameStackheadline"
        android:layout_height="wrap_content" android:layout_width="match_parent">
        <TextView android:ellipsize="end" android:gravity="top|start"
            android:id="@+id/txtHeadlineSix"
            android:layout_gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{homeOneRowModel.txtHeadlineSix}"
            style="@style/txtPoppinssemibold9" tools:text="@string/lbl_hamza"/>
        <TextView android:ellipsize="end" android:gravity="top|start"
            android:id="@+id/txtIslamabadPk"
            android:layout_gravity="bottom|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3pxv"
            android:layout_marginEnd="@dimen/_1pxh"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{homeOneRowModel.txtIslamabadPk}"
            style="@style/txtPoppinsmedium6" tools:text="@string/lbl_islamabad_pk"/>
        <TextView android:ellipsize="end" android:gravity="top|start"
            android:id="@+id/txtCreatedon10dOne"
            android:layout_gravity="bottom|start"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{homeOneRowModel.txtCreatedon10dOne}"
            style="@style/txtPoppinsmedium4" tools:text="@string/msg_created_on_10_d"/>
    </FrameLayout>
</layout>
